Format python to pep8 & add doc strings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
-        "initialising"
+        "customise",
+        "herokuapp",
+        "initialising",
+        "lineitem",
+        "lineitems",
+        "MEDIAFILES",
+        "Profileform",
+        "socialaccount"
     ]
 }
